--- a/BaiTap01/BaiTap01/Views/Home/Index.cshtml
+++ b/BaiTap01/BaiTap01/Views/Home/Index.cshtml
@@ -10,45 +10,98 @@
     <div class="cuu-chuong-container">
         <div class="cuu-chuong">
             <h3>Cửu Chương 2</h3>
+            <div class="cuu-chuong-in">
             @for (int i = 1; i <= 10; i++)
             {
                 @($"2 x {i} = {2 * i}")<br />
             }
+            </div>
         </div>
 
         <div class="cuu-chuong">
             <h3>Cửu Chương 3</h3>
+            <div class="cuu-chuong-in">
             @for (int i = 1; i <= 10; i++)
             {
                 @($"3 x {i} = {3 * i}")<br />
             }
+                </div>
         </div>
 
         <div class="cuu-chuong">
             <h3>Cửu Chương 4</h3>
+            <div class="cuu-chuong-in">
             @for (int i = 1; i <= 10; i++)
             {
                 @($"4 x {i} = {4 * i}")<br />
-            }
+                        }
+                    </div>
         </div>
 
         <div class="cuu-chuong">
             <h3>Cửu Chương 5</h3>
+            <div class="cuu-chuong-in">
             @for (int i = 1; i <= 10; i++)
             {
                 @($"5 x {i} = {5 * i}")<br />
             }
+                        </div>
         </div>
         
         <div class="cuu-chuong">
             <h3>Cửu Chương 6</h3>
+            <div class="cuu-chuong-in">
             @for (int i = 1; i<=10; i++)
             {
                 @($"6 x {i} = {6 ^ i}")<br />
             }
+                            </div>
         </div>
 
+        <div class="cuu-chuong">
+            <h3>Cửu Chương 7</h3>
+            <div class="cuu-chuong-in">
+            @for (int i = 1; i <= 10; i++)
+            {
+                @($"7 x {i} = {7 ^ i}")<br />
+                                    }
+                                </div>
+        </div>
+
+        <div class="cuu-chuong">
+            <h3>Cửu Chương 8</h3>
+            <div class="cuu-chuong-in">
+            @for (int i = 1; i <= 10; i++)
+            {
+                @($"8 x {i} = {8 ^ i}")<br />
+            }
+                                    </div>
+        </div>
+
+        <div class="cuu-chuong">
+            <h3>Cửu Chương 9</h3>
+            <div class="cuu-chuong-in">
+            @for (int i = 1; i <= 10; i++)
+            {
+                @($"9 x {i} = {9 ^ i}")
+
+                <br />
+            }
+            </div>
+        </div>
+
+        <div class="cuu-chuong">
+            <h3>Cửu Chương 10</h3>
+            <div class="cuu-chuong-in">
+				@for (int i = 1; i <= 10; i++)
+				{
+					@($"10 x {i} = {10 ^ i}")<br />
+				}
+            </div>
+
+        </div>
 	</div>
+
     <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
 
@@ -57,6 +110,7 @@
 		display: flex;
 		flex-wrap: wrap;
 		justify-content: center;
+        gap: 20px;
 	}
 
     .cuu-chuong {
@@ -65,5 +119,12 @@
         padding: 10px;
         border: 1px solid #ccc;
         border-radius: 5px;
+        text-align: center;
+    }
+    .cuu-chuong-in{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        text-align:left;
     }
 	<style/ >
