--- a/BaiThucHanh/BaiThucHanh/Views/Tuan2/Index.cshtml
+++ b/BaiThucHanh/BaiThucHanh/Views/Tuan2/Index.cshtml
@@ -8,11 +8,11 @@
     <div class="header">Bài tập</div>
     <div class="sub-container">
         <div class="left">
-            <p>Họ tên: @ViewBag.HoTen</p>
-            <p>MSSV: @ViewBag.MSSV</p>
+            <p>Họ tên: @ViewBag.HoTen
+            <br>MSSV: @ViewBag.MSSV</p>
         </div>
         <div class="right">
-            <img src="~ /img/01.jpg">
+            <a href="~/Profile"><img src="~/css/01.jpg"></a>
             <p>Giới thiệu bản thân</p>
         </div>
     </div>
