--- a/ProjectA/ProjectA/Areas/Admin/Views/SanPham/Index.cshtml
+++ b/ProjectA/ProjectA/Areas/Admin/Views/SanPham/Index.cshtml
@@ -23,7 +23,7 @@
                     <td>
                         <a asp-action="Upsert" asp-route-id="@item.Id">Edit</a>|
                         <a href="#">Details</a>|
-                        <a href="#">Delete</a>
+                        <a href="#" onclick="confirmDelete(@item.Id, $(this))">Delete</a>
                     </td>
                 </tr>
             }
@@ -31,3 +31,21 @@
     </table>
     <a asp-controller="SanPham" asp-action="Upsert" class="btn btn-primary">Thêm mới</a>
 </div>
+
+<script>
+    function confirmDelete(id, row) {
+        if (confirm("Ban co muon xoa SP co id la " + id + "?")) {
+            xoa(id, $(row))
+        }
+    }
+    function xoa(idx, row){
+        $.ajax({
+            url: `SanPham/Delete`,
+            data: { id: idx},
+            type: "POST",
+            success: function (data) {
+                row.closest("tr").remove();
+            }
+        })
+    }
+</script>
