--- a/ProjectA/ProjectA/Areas/Customer/Views/Home/Index.cshtml
+++ b/ProjectA/ProjectA/Areas/Customer/Views/Home/Index.cshtml
@@ -1,8 +1,35 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
+﻿@model IEnumerable<SanPham>
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="row">
+    @foreach (var item in Model)
+    {
+        <div class="col-md-3 p-3">
+            <div class="card h-100 d-flex flex-column" style="min-height: 500px;">
+                <!-- Ảnh sản phẩm -->
+                <img src="@item.ImageUrl" class="card-img-top" alt="@item.Name" style="height: 200px; object-fit: cover;">
+
+                <!-- Nội dung sản phẩm -->
+                <div class="card-body d-flex flex-column" style="flex-grow: 1;">
+                    <!-- Giá bán -->
+                    <h4 class="card-title text-danger">@item.price.ToString("N0") VND</h4>
+
+                    <!-- Tên sản phẩm (giới hạn 2 dòng) -->
+                    <h5 class="card-title" style="min-height: 40px; display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical; overflow: hidden;">@item.Name</h5>
+
+                    <!-- Mô tả sản phẩm (giới hạn 3 dòng) -->
+                    <p class="card-text" style="min-height: 80px; max-height: 90px; overflow: hidden; display: -webkit-box; -webkit-line-clamp: 3; -webkit-box-orient: vertical;">@item.Description</p>
+
+                    <!-- Nút thêm và mua hàng (luôn nằm dưới cùng) -->
+                    <div class="mt-auto row">
+                        <div class="col-6">
+                            <a href="#" class="btn btn-primary w-100">Thêm</a>
+                        </div>
+                        <div class="col-6">
+                            <a href="#" class="btn btn-secondary w-100">Mua hàng</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    }
 </div>
