--- a/ProjectA/ProjectA/wwwroot/css/site.css
+++ b/ProjectA/ProjectA/wwwroot/css/site.css
@@ -132,3 +132,21 @@ body {
         height: 48px;
     }
 }
+.card-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px; /* Khoảng cách giữa các thẻ */
+}
+
+.card {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%; /* Đặt chiều cao thẻ bằng nhau */
+}
+
+    .card img {
+        max-height: 200px; /* Đặt chiều cao tối đa của ảnh để ảnh không quá lớn */
+        object-fit: cover; /* Đảm bảo ảnh giữ đúng tỷ lệ */
+    }
+
